created a visual of grid using grid, also tried flexbox but have it commented out

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,19 @@ h3{
     justify-content: center;
 }
 
-.container{
+/* .container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     border: solid;
-    
+} */
 
+.container{
+    display: grid;
+
+    grid-template-columns: repeat(16, 1.77%);
+    grid-template-rows: max-content;
+    justify-content: center;
+
+    border: solid;
 }
-
