--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,42 @@ h3{
     justify-content: center;
 }
 
+.same-line{
+    display: flex;
+    justify-content: center;
+    margin-right: 100px;
+}
+
+.side-box{
+    display: flex;
+    box-sizing: border-box;
+    border: 3px solid;
+    width: 100px;
+    height: 200px;
+    justify-content: flex-end;
+    margin-right: 20px;
+
+}
+
+.btn{
+    margin: 0 auto;
+    /* display: block; */
+    margin-top: 150px;
+    height: 25px;
+    width: 50px;
+    border-radius: 7px;
+}
+
 /* Grid with 16x16 divs and border around it */
 .container{
     /* box-sizing: border-box;
     border: 3px solid; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-left: 348px;
-    margin-right: 348px;
+    /* justify-content: center; */
+    /* margin-left: 348px; */
+    /* margin-right: 348px; */
     width: fit-content;
     width: 288px;
-    border: 3px solid;
+    /* border: 3px solid; */
 }
