--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h3{
     box-sizing: border-box;
     border: 3px solid;
     width: 100px;
-    height: 200px;
+    height: 288px;
     justify-content: flex-end;
     margin-right: 50px;
 }
@@ -60,12 +60,15 @@ h3{
 
   /* button styling */
 .btn{
-    margin: 0 auto;
+    /* margin: 0 auto; */
     /* display: block; */
-    margin-top: 150px;
+    /* margin-top: 150px; */
     height: 25px;
-    width: 100%;
-    border-radius: 7px;
+    width: 5%; 
+    position: absolute;
+    top: 380px;
+    left: 465px;
+    /* border-radius: 7px;  */
 }
 
 /* Grid with 16x16 divs and border around it */
