--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,52 @@ h3 {
   display: flex;
 }
 
+.side-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  /* border: 1px solid black; */
+  margin-right: 50px;
+  padding: 15px;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #00bfff;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #00bfff;
+  cursor: pointer;
+}
+
+/* Makes grid of 16x16 with boxes of 25px */
 #container {
   display: grid;
-  grid-template-columns: repeat(16, 25px [col-start]);
-  /* grid-template-rows: repeat(16, 25px [col-start]); */
+  /* grid-template-columns: repeat(16, 25px [col-start]); */
+  /* border: 1px solid black; */
+  /* height: 500px;
+  width: 500px; */
 }
