--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@ h3 {
   padding: 15px;
 }
 
+.rgb {
+  /* width: 50px;
+  height: 50px; */
+}
+
 .slider {
   -webkit-appearance: none;
   width: 100%;
