--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,19 @@ h3 {
   padding: 15px;
 }
 
+#color {
+  width: 100px;
+  height: 100px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50%;
+}
+
 .rgb {
   /* width: 50px;
   height: 50px; */
