--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,36 @@ html {
   justify-content: center;
 }
 
+body {
+  font-family: "Share Tech", sans-serif;
+
+  text-shadow: 8px 8px 10px #0000008c;
+  background-color: #ffdde2ff;
+  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #ecdfa5, #b1b173, #e8c47d, #bab75f, #c7cf3b); */
+}
+
 h1,
 h3 {
   display: flex;
   justify-content: center;
   box-shadow: inset;
+}
+h1 {
+  font-size: 40px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #013220, forestgreen);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+h3 {
+  font-size: 20px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #013220, forestgreen);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 .same-line {
@@ -40,17 +65,34 @@ h3 {
   border: none;
   border-radius: 50%;
 }
+
 /* this makes the color picker a circle */
 input[type="color"]::-webkit-color-swatch {
   border: none;
   border-radius: 50%;
 }
 
-.rgb {
-  /* width: 50px;
-  height: 50px; */
+/* Below 2 blocks are for the buttons */
+button {
+  display: inline-block;
+  outline: 0;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  border-radius: 4px;
+  font-size: 13px;
+  height: 30px;
+  background-color: forestgreen;
+  color: white;
+  padding: 0 20px;
+}
+/* 013220 */
+button:hover,
+.slider::-webkit-slider-thumb:hover {
+  background-color: #013220;
 }
 
+/* below three CSS blocks are for the slider */
 .slider {
   -webkit-appearance: none;
   width: 100%;
@@ -69,7 +111,7 @@ input[type="color"]::-webkit-color-swatch {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #00bfff;
+  background: forestgreen;
   cursor: pointer;
 }
 
@@ -77,7 +119,7 @@ input[type="color"]::-webkit-color-swatch {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #00bfff;
+  background: #8feb91;
   cursor: pointer;
 }
 
@@ -88,4 +130,16 @@ input[type="color"]::-webkit-color-swatch {
   border: 5px solid black;
   width: 500px;
   height: 500px;
+}
+
+.footer {
+  text-align: center;
+  color: forestgreen;
+  font-weight: bold;
+  margin: 20px;
+}
+
+a:visited {
+  text-decoration: none;
+  color: black;
 }
